--- a/index.html
+++ b/index.html
@@ -861,9 +861,10 @@
                 </p>
                 
                 <div class="cta-buttons">
-                    <button class="btn btn-primary">
+                    <a href="https://calendly.com/pratheek-asmlabs/30min" class="btn btn-primary" target="_blank" 
+   rel="noopener noreferrer">
                         Schedule a Briefing
-                    </button>
+                    </a>
                     <a href="services.html" class="btn btn-outline">
                         Learn More
                     </a>
