docs(services): update contact link from email to calendly booking

--- a/services.html
+++ b/services.html
@@ -1709,7 +1709,7 @@
         <p class="cta-description">
           Let's discuss how our AI solutions can drive innovation and efficiency in your organization while keeping your data secure and your competitive advantage in-house.
         </p>
-        <a href="mailto:hello@asymmetriclabs.ai" class="btn btn-primary">
+        <a href="https://calendly.com/pratheek-asmlabs/30min" class="btn btn-primary">
           Start Your AI Journey
           <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
