--- a/services.html
+++ b/services.html
@@ -706,6 +706,48 @@
         height: 28px;
       }
     }
+
+    /* Footer Links */
+    .footer-links {
+      margin-bottom: 1rem;
+    }
+
+    .footer-links a {
+      color: rgba(209, 213, 219, 0.8);
+      text-decoration: none;
+      font-size: 0.9rem;
+      transition: color 0.3s ease;
+    }
+
+    .footer-links a:hover {
+      color: rgb(99, 102, 241);
+    }
+
+    /* Navbar Button Styling */
+    .navbar-nav .btn {
+      padding: 0.5rem 1rem;
+      font-size: 0.875rem;
+      border-radius: 6px;
+      margin-left: 0.5rem;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.375rem;
+      transition: all 0.3s ease;
+    }
+
+    .navbar-nav .btn svg {
+      width: 0.875rem;
+      height: 0.875rem;
+      transition: transform 0.3s ease;
+    }
+
+    .navbar-nav .btn:hover svg {
+      transform: translateX(2px);
+    }
+
+    .navbar-nav .btn::after {
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -719,6 +761,7 @@
       <ul class="navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html" class="active">Services</a></li>
+        <li><a href="https://calendly.com/pratheek-asmlabs/30min" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Schedule a Briefing <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg></a></li>
       </ul>
     </div>
   </nav>
@@ -1723,6 +1766,9 @@
       <div class="container">
         <div class="footer-title">Asymmetric Labs</div>
         <p class="footer-subtitle">Private AI Assistants for Enterprises</p>
+        <div class="footer-links">
+          <a href="privacy-policy.html">Privacy Policy</a>
+        </div>
         <div class="footer-copyright">© 2025 Asymmetric Labs. All rights reserved.</div>
       </div>
     </footer>
